src/components/Post/Post.module.scss
.Post {
  padding: 15px;
  background: white;
  max-width: 941px;

  &__header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;

    &Content {
      display: flex;
      flex-direction: column;
    }

    &Author {
      display: flex;
      align-items: center;
      gap: 12px;
    }
  }

  &__author {
    display: flex;
    flex-direction: column;

    &Avatar {
      width: 46px;
      height: 46px;
    }

    &Name {
      color: rgba(0, 0, 0, 0.85);
      font-size: 18px;
      font-style: normal;
      font-weight: 400;
    }

    &Date {
      color: rgba(0, 0, 0, 0.5);
      font-size: 12px;
      font-style: normal;
      font-weight: 400;
      margin-top: 5px;
    }
  }

  &__headingWrapper {
    display: flex;
    align-items: center;
  }

  &__title {
    color: #1890ff;

    font-size: 20px;
    font-style: normal;
    font-weight: 400;
    line-height: 28px; /* 140% */
  }

  &__like {
    margin-left: 13px;
  }
  
  &__tags {
    margin-top: 5px;
    display: flex;
    gap: 5px;
  }

  &__body {
    color: rgba(0, 0, 0, 0.75);
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: 22px; /* 183.333% */
  }
}

